fix weird spacing things on mobile

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -33,7 +33,7 @@ footer {
   }
 }
 
-@media (max-width: 440px) {
+@media (max-width: 400px) {
   footer {
     font-size: 1.75rem;
 
